# server/service/Models/Responses/TurbineResponse.cs
@@ -1,4 +1,4 @@
-﻿using DataAccess.Entities;
+using DataAccess.Entities;
 
 namespace service.Models.Responses;
 
@@ -7,4 +7,5 @@ public class TurbineResponse(Turbine t)
     public string Id { get; set; } = t.Id;
     public string Displayname { get; set; } = t.Displayname;
     public List<TurbineTelemetryResponse> Metrics { get; set; } = new();
+    public List<AlertResponse> Alerts { get; set; } = new();
 }
